Clarify SimpleNote import format

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -137,9 +137,9 @@
       "importDescription": "Import from major note app exports (text structure only).",
       "importNote": "Unsupported elements will be skipped; a summary is shown after import.",
       "importPlaceholder": "Import from major note apps will be added next.",
-      "supported": "Supported: SimpleNote (.json/.zip/.txt)",
+      "supported": "Supported: SimpleNote (.json; .zip containing SimpleNote export)",
       "importFailed": "Import failed.",
-      "unsupportedFile": "Unsupported file. Please select a SimpleNote export (.json/.zip/.txt).",
+      "unsupportedFile": "Unsupported file. Please select a SimpleNote export (.json or .zip containing it).",
       "needInitialPullImport": "Finish the first pull before importing.",
       "importReportTitle": "Import Summary",
       "importReportHeader": "SimpleNote import completed",
