--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -141,10 +141,10 @@
       "importDescription": "代表的なメモアプリのエクスポートからテキスト構造を取り込みます。",
       "importNote": "非サポート要素はスキップし、結果サマリーを表示します。",
       "importPlaceholder": "主要メモアプリからのインポートは順次追加します。",
-      "supported": "対応: SimpleNote (.json/.zip/.txt)",
+      "supported": "対応: SimpleNote (.json; それを含む .zip)",
       "importSuccess": "SimpleNote から {count} 件取り込み（スキップ {skipped} 件）",
       "importFailed": "インポートに失敗しました",
-      "unsupportedFile": "サポートされていないファイルです。SimpleNote のエクスポート（.json/.zip/.txt）を選んでください",
+      "unsupportedFile": "サポートされていないファイルです。SimpleNote のエクスポート（.json またはそれを含む .zip）を選んでください",
       "needInitialPullImport": "初回 Pull 完了後にインポートできます",
       "importReportTitle": "インポート結果",
       "importReportHeader": "SimpleNote インポート完了",
