--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -138,6 +138,8 @@
       "importNote": "Unsupported elements will be skipped; a summary is shown after import.",
       "importPlaceholder": "Import from major note apps will be added next.",
       "supported": "Supported: SimpleNote (.json; .zip containing SimpleNote export)",
+      "importStarting": "Importing SimpleNote export...",
+      "importDone": "Import completed. Summary leaf added.",
       "importFailed": "Import failed.",
       "unsupportedFile": "Unsupported file. Please select a SimpleNote export (.json or .zip containing it).",
       "needInitialPullImport": "Finish the first pull before importing.",
