Differentiate delete copy for notes and sub-notes

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -176,7 +176,8 @@
     "unsavedChanges": "You have unsaved changes. Pull will overwrite them. Continue?",
     "deleteNote": "Delete this note?",
     "deleteLeaf": "Delete this leaf?",
-    "deleteNoteWithChildren": "Delete this note and its direct sub-notes/leaves?"
+    "deleteRootNoteWithChildren": "Delete this note and its direct sub-notes/leaves?",
+    "deleteSubNoteWithChildren": "Delete this sub-note and its leaves?"
   },
   "loading": {
     "pulling": "Pulling...",
