Add leaf and char stats to home view (#15)

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -28,6 +28,8 @@
     "shareFailed": "Failed to share"
   },
   "home": {
+    "leafCount": "Leaves",
+    "charCount": "Characters",
     "pushCount": "Push Count",
     "noNotes": "No notes yet.\nYou can create a new note using the button at the bottom left."
   },
