--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -28,6 +28,8 @@
     "shareFailed": "共有に失敗しました"
   },
   "home": {
+    "leafCount": "リーフ数",
+    "charCount": "文字数",
     "pushCount": "Push回数",
     "noNotes": "ノートがまだありません。\n左下のボタンから新規ノートを作成できます。"
   },
