Add pull button to header for manual sync

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -7,7 +7,8 @@
     "home": "Home"
   },
   "header": {
-    "settings": "Open settings"
+    "settings": "Open settings",
+    "pull": "Pull"
   },
   "breadcrumbs": {
     "goHome": "Go to home",
