--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -7,7 +7,8 @@
     "home": "ホーム"
   },
   "header": {
-    "settings": "設定を開く"
+    "settings": "設定を開く",
+    "pull": "Pullする"
   },
   "breadcrumbs": {
     "goHome": "ホームへ移動",
