Add tool name reset to default

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -93,7 +93,8 @@
       },
       "toolName": {
         "label": "Tool Name",
-        "placeholder": "Agasteer"
+        "placeholder": "Agasteer",
+        "reset": "Reset to Default"
       },
       "font": {
         "title": "Custom Font",
