--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -93,7 +93,8 @@
       },
       "toolName": {
         "label": "ツール名",
-        "placeholder": "Agasteer"
+        "placeholder": "Agasteer",
+        "reset": "デフォルトに戻す"
       },
       "font": {
         "title": "カスタムフォント",
